@@ -88,7 +88,7 @@ public abstract class EntityMinecart extends Entity implements IWorldNameable
     {
         this.dataWatcher.addObject(17, Integer.valueOf(0));
         this.dataWatcher.addObject(18, Integer.valueOf(1));
-        this.dataWatcher.addObject(19, new Float(0.0F));
+        this.dataWatcher.addObject(19, Float.valueOf(0.0F));
         this.dataWatcher.addObject(20, Integer.valueOf(0));
         this.dataWatcher.addObject(21, Integer.valueOf(6));
         this.dataWatcher.addObject(22, Byte.valueOf((byte)0));
@@ -221,7 +221,6 @@ public abstract class EntityMinecart extends Entity implements IWorldNameable
 
         if (!this.worldObj.isRemote && this.worldObj instanceof WorldServer)
         {
-            this.worldObj.theProfiler.startSection("portal");
             MinecraftServer minecraftserver = ((WorldServer)this.worldObj).getMinecraftServer();
             int i = this.getMaxInPortalTime();
 
@@ -267,8 +266,6 @@ public abstract class EntityMinecart extends Entity implements IWorldNameable
             {
                 --this.timeUntilPortal;
             }
-
-            this.worldObj.theProfiler.endSection();
         }
 
         if (this.worldObj.isRemote)
